--- a/diplom/Введение.tex
+++ b/diplom/Введение.tex
@@ -1,37 +1,36 @@
 \section*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{section}{ВВЕДЕНИЕ}
 
-Аддитивные технологии (АТ) начали активно развиваться со времени получения первых трехмерных изображений изделий на дисплеях компьютеров. Начало положила стереолитография, затем довольно многочисленные новые принципы стали называть технологиями быстрого прототипирования, затем укоренилось название "<Аддитивные технологии">. Интенсивность развития данных технологий не имеет аналогов. АТ изменили процессы проектирования и конструирования изделий, превратив их в процессы непрерывного создания изделий. Современные проектирование и производство изделий невозможно представить без данного рода технологий. 3D-принтеры стали такими же распространенными, как и персональные компьютеры. С помощью 3D-принтеров получают ткани, обувь, продукты питания, а также выращивают человеческие органы. Во многих отраслях, например, в космической отрасли, альтернативы аддитивным технологиям нет.
+Современное сельское хозяйство находится на пороге трансформации. Это обусловлено стремительным развитием цифровых технологий. Повышение продуктивности и качества аграрного производства требует внедрения инновационных решений, способных минимизировать потери и оптимизировать процессы. Одной из ключевых задач остается раннее выявление заболеваний сельскохозяйственных культур, таких как томаты, чья восприимчивость к патологиям существенно влияет на урожайность и экономическую устойчивость хозяйств \cite{plant8}.
 
-АТ предполагают изготовление детали методом послойного нанесения материала, в отличие от традиционных методов формирования детали, за счёт удаления материала из массива заготовки.
+Традиционные методы диагностики, основанные на визуальном осмотре или лабораторных исследованиях, часто оказываются трудоемкими и медленными, а также требуют привлечения квалифицированных специалистов. Но уже на сегодняшний день, технологии искусственного интеллекта (ИИ) и компьютерного зрения представляют новые способы автоматизацию процессов мониторинга здоровья растений, которые смогут обеспечить высокую точность и оперативность \cite{sh1}.
 
-Современные компании, видя, как развиваются информационные технологии, пытаются использовать их выгодно для своего бизнеса, поэтому запускают свой web-сайт. С его помощью предприятие может заявить о себе, проинформировать потенциального заказчика об услугах или продуктах, которые предоставляет, а также позволяет пользователям сделать с помощью сайта онлайн-заказ, произвести покупку или оплатить счета.
+Создание удобных инструментов на базе машинного обучения открывает новые возможности в сельском хозяйстве. Такие решения позволят эффективно анализировать визуальные данные, выявлять признаки заболеваний растений и предлагать обоснованные рекомендации по их лечению и профилактике. Интуитивно понятный интерфейс и автоматизация процессов делают данный подход доступным для широкого круга пользователей.
 
-Сайт считается лицом компании и может существенно повысить ее имидж. Любой пользователь сети Интернет сможет получить необходимую информацию о компании в любой момент, появляется возможность найти контактные телефоны, адрес и e-mail, чтобы связаться с компанией. Сейчас большинство клиентов узнают о ее существовании именно через сайт. Поэтому сайт можно назвать самой лучшей рекламой. 
+\emph{Цель данной работы} -- разработка интеллектуальной системы для выявления заболеваний сельскохозяйственных растений, в частности томатов, на основе технологий компьютерного зрения и веб-технологий. Для достижения этой цели необходимо решить следующие задачи:
 
-Главной задачей профессионально построенного сайта является превращение посетителя, зашедшего на сайт, в потенциального клиента.
-
-\emph{Цель настоящей работы} – разработка web-сайта компании для привлечения новой аудитории, увеличения заказов, рекламы продукции и услуг компании. Для достижения поставленной цели необходимо решить \emph{следующие задачи:}
 \begin{itemize}
-\item провести анализ предметной области;
-\item разработать концептуальную модель web-сайта;
-\item спроектировать web-сайт;
-\item реализовать сайт средствами web-технологий.
+	\item определить требования к системе диагностики и описать её функциональные возможности;
+	\item разработать архитектуру программного комплекса;
+	\item обучить свёрточную нейронную сеть распознавать заболевания;
+	\item реализовать веб-приложение для загрузки изображений растений, анализа заболеваний и предоставления рекомендаций;
+	\item провести комплексное тестирование системы для оценки её надежности и точности.
 \end{itemize}
 
 \emph{Структура и объем работы.} Отчет состоит из введения, 4 разделов основной части, заключения, списка использованных источников, 2 приложений. Текст выпускной квалификационной работы равен \formbytotal{lastpage}{страниц}{е}{ам}{ам}.
 
 \emph{Во введении} сформулирована цель работы, поставлены задачи разработки, описана структура работы, приведено краткое содержание каждого из разделов.
 
-\emph{В первом разделе} на стадии описания технической характеристики предметной области приводится сбор информации о деятельности компании, для которой осуществляется разработка сайта.
+\emph{В первом разделе} проводится анализ предметной области, включая сбор информации о болезнях томатов и методах их диагностики с использованием искусственного интеллекта.
 
-\emph{Во втором разделе} на стадии технического задания приводятся требования к разрабатываемому сайту.
+\emph{Во втором разделе} описываются требования к разрабатываемой системе диагностики заболеваний.
 
-\emph{В третьем разделе} на стадии технического проектирования представлены проектные решения для web-сайта.
+\emph{В третьем разделе} представлены проектные решения для интеллектуальной системы, архитектура модели машинного обучения и веб-приложения.
 
-\emph{В четвертом разделе} приводится список классов и их методов, использованных при разработке сайта, производится тестирование разработанного сайта.
+\emph{В четвертом разделе} приведены программные компоненты системы, их описание и результаты тестирования.
 
 В заключении излагаются основные результаты работы, полученные в ходе разработки.
 
 В приложении А представлен графический материал.
+
 В приложении Б представлены фрагменты исходного кода. 
