--- a/diplom/СписокИсточников.tex
+++ b/diplom/СписокИсточников.tex
@@ -17,6 +17,8 @@
 	
 	\bibitem{plant8} Овсинский, И. Е. Новая система земледелия /И. Е. Овсинский  – Москва~: Концептуал, 2023. - 240 с. – ISBN 978-5-907624-99-3. – Текст~: непосредственный.	
 	
+	\bibitem{sh1} Современное сельское хозяйство : сайт / fnb TECH. – Москва : fnb TECH, 2025 – . – URL: \url{https://fnb.tech/ru/modern-agriculture/} (дата обращения: 23.05.2025). – Текст: электронный.
+		
 	\bibitem{plant9} Монторо, Ж. Семена и зерна / Ж. Монторо  – Москва~: Эксмо, 2024. - 256 с. – ISBN 978-5-04-196329-3. – Текст~: непосредственный.
 	
 	\bibitem{plant10}Копытин, И. П. Ведение сельского хозяйства в Центрально-Нечерноземном округе России / И. П. Копытин  – Санкт-Петербург~: Лань, 2022. - 336 с. – ISBN 978-5-8114-9863-5. – Текст~: непосредственный.	
@@ -84,6 +86,8 @@
 	\bibitem{python3} Обзор языка программирования Python : сайт / Proglib. – Москва : Code Basics, 2023 – . – URL: \url{https://code-basics.com/ru/blog_posts/obzor-yazyka-programmirovaniya-python} (дата обращения: 11.03.2025). – Текст: электронный.
 	
 	\bibitem{python4} Библиотеки для веб-разработки на Python : сайт / Code Basics. Skypro – Москва : Skypro, 2023 – . – URL: \url{https://sky.pro/wiki/python/biblioteki-dlya-veb-razrabotki-na-python/} (дата обращения: 11.03.2025). – Текст: электронный.
+	
+	\bibitem{colab1} Google Colaboratory : сайт / Google Colab, 2025 – . – URL: \url{https://colab.google/} (дата обращения: 24.03.2025). – Текст: электронный.
 
 	\bibitem{flask1} Мега-Учебник Flask : сайт / Habr. – Москва : Habr, 2024 – . – URL: \url{https://habr.com/ru/articles/804245/} (дата обращения: 12.03.2025). – Текст: электронный.
 	
