--- a/diplom/ТехЗадание.tex
+++ b/diplom/ТехЗадание.tex
@@ -1,7 +1,7 @@
 \section{Техническое задание}
 \subsection{Основание для разработки}
 
-Полное наименование системы: «Разработка интеллектуальной системы для выявления заболеваний сельскохозяйственных растений». Основанием для разработки программы является приказ ректора ЮЗГУ от «17» апреля 2025 г. № 1828-с приказа «О направлении (допуске) на практику». %«Об утверждении тем выпускных квалификационных работ».
+Полное наименование системы: «Разработка интеллектуальной системы для выявления заболеваний сельскохозяйственных растений». Основанием для разработки программы является приказ ректора ЮЗГУ от «04» апреля 2025 г. № 1696-с приказа «Об утверждении тем выпускных квалификационных работ и руководителей выпускных квалификационных работ».
 
 \subsection{Цель и назначение разработки}
 
@@ -99,7 +99,7 @@
 Основной успешный сценарий:
 \begin{itemize}
 	\item изображение проанализировано;
-	\item пользователь переходит к параграфу "Профилактика".
+	\item пользователь переходит к параграфу "Профилактика";
 	\item просматривает методы профилактики болезни.
 \end{itemize}
 
