--- a/diplom/main.tex
+++ b/diplom/main.tex
@@ -1,14 +1,14 @@
 \input{setup.tex}
 
 % Режим шаблона (должен быть включен один из трех)
-%\ВКРtrue
-\Практикаtrue
+\ВКРtrue
+%\Практикаtrue
 %\Курсоваяtrue
 
 \newcommand{\Дисциплина}{<<Проектирование и архитектура программных систем>>} % для курсовой
 \newcommand{\КодСпециальности}{09.03.04} % Курсовая
 \newcommand{\Специальность}{Программная инженерия} % Курсовая
-\newcommand{\Тема}{Интеллектуальная система для выявления заболеваний } % ВКР Курсовая
+\newcommand{\Тема}{Интеллектуальная система для выявления заболеваний} % ВКР Курсовая
 \newcommand{\ТемаВтораяСтрока}{сельскохозяйственных растений}
 \newcommand{\ГдеПроводитсяПрактика}{ООО «Предприятие ВТИ-Сервис»} % для практики
 \newcommand{\РуководительПрактПредпр}{Федосов Д. В.} % для практики
@@ -24,9 +24,9 @@
 \newcommand{\Руководитель}{Р. А. Томакова} % для ВКР и курсовой
 \newcommand{\Нормоконтроль}{А. А. Чаплыгин} % для ВКР
 \newcommand{\ЗавКаф}{А. В. Малышев} % для ВКР
-\newcommand{\ДатаПриказа}{«07» апреля 2023~г.} % для ВКР
-\newcommand{\НомерПриказа}{1505-с} % для ВКР
-\newcommand{\СрокПредоставления}{«13» июня 2023~г.} % для ВКР, курсового
+\newcommand{\ДатаПриказа}{«04» апреля 2025~г.} % для ВКР
+\newcommand{\НомерПриказа}{1696-с} % для ВКР
+\newcommand{\СрокПредоставления}{«09» июня 2025~г.} % для ВКР, курсового
 
 \begin{document}
 \maketitle
